[package]
name = "motor-rs"
version.workspace = true
edition.workspace = true
description = "Rust port of EPICS motor record"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
asyn-rs = { workspace = true }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
bitflags = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "motor"
harness = false
