[package]
name = "mqtt-rs"
version.workspace = true
edition.workspace = true
description = "MQTT driver for epics-rs — publish/subscribe MQTT topics as EPICS records"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
asyn-rs = { workspace = true }
rumqttc = "0.24"
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
thiserror = "2"

epics-base-rs = { workspace = true, optional = true }
epics-ca-rs = { workspace = true, optional = true }

[features]
default = []
ioc = ["dep:epics-base-rs", "dep:epics-ca-rs", "asyn-rs/epics"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
