[package]
name = "snc-rs"
version.workspace = true
edition.workspace = true
description = "SNL compiler CLI for sequencer-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
snc-core-rs = { workspace = true }
clap = { version = "4", features = ["derive"] }
