[package]
name = "mini-beamline"
version.workspace = true
edition.workspace = true
description = "Mini beamline IOC: beam current, point detectors, and moving dot area detector"
publish = false

[features]
ioc = ["dep:epics-base-rs", "dep:epics-ca-rs", "dep:epics-bridge-rs", "dep:ad-plugins-rs", "ad-plugins-rs/ioc", "ad-plugins-rs/pva", "ad-core-rs/ioc", "asyn-rs/epics", "dep:motor-rs", "dep:optics-rs"]

[dependencies]
ad-core-rs = { workspace = true }
ad-plugins-rs = { workspace = true, optional = true }
asyn-rs = { workspace = true }
motor-rs = { workspace = true, optional = true }
optics-rs = { workspace = true, optional = true }
rand = "0.9"
parking_lot = "0.12"
libm = "0.2"
epics-base-rs = { workspace = true, optional = true }
epics-ca-rs = { workspace = true, optional = true }
epics-bridge-rs = { workspace = true, optional = true }

[[bin]]
name = "mini_ioc"
path = "src/bin/mini_ioc.rs"
required-features = ["ioc"]
