[package]
name = "mqtt-ioc"
version.workspace = true
edition.workspace = true
description = "MQTT IOC example — demonstrates mqtt-rs driver with EPICS records"
publish = false

[dependencies]
asyn-rs = { workspace = true, features = ["epics"] }
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
mqtt-rs = { workspace = true, features = ["ioc"] }

[[bin]]
name = "mqtt_ioc"
path = "src/bin/mqtt_ioc.rs"
