[package]
name = "mqtt-ioc"
version.workspace = true
edition.workspace = true
description = "MQTT IOC example — demonstrates mqtt-rs driver with EPICS records"
publish = false

[features]
ioc = ["dep:epics-ca-rs", "dep:epics-bridge-rs", "asyn-rs/epics", "mqtt-rs/ioc"]

[dependencies]
asyn-rs = { workspace = true }
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true, optional = true }
epics-bridge-rs = { workspace = true, optional = true }
mqtt-rs = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "mqtt_ioc"
path = "src/bin/mqtt_ioc.rs"
required-features = ["ioc"]
