[package]
name = "random-signals"
version.workspace = true
edition.workspace = true
description = "Four random signal PVs updating at 10ms (100 Hz)"
publish = false

[dependencies]
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
rand = { version = "0.9", features = ["small_rng"] }
