[package]
name = "random-signals"
version.workspace = true
edition.workspace = true
description = "Four random signal PVs updating at 10ms (100 Hz) — CA + PVA dual-protocol"
publish = false

[dependencies]
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
epics-pva-rs = { workspace = true }
rand = { version = "0.9", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
